# swagger/swagger.json
@@ -571,9 +571,186 @@
                     }
                 }
             }
+        },
+        "/status/": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "description": "get Status\n\u003cbr\u003e",
+                "operationId": "StatusController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.StatusListResponse"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "status"
+                ],
+                "description": "create Status\n\u003cbr\u003e",
+                "operationId": "StatusController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Status content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Status"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.Status"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/status/{id}": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "description": "get Status by id\n\u003cbr\u003e",
+                "operationId": "StatusController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Status"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "status"
+                ],
+                "description": "update the Status\n\u003cbr\u003e",
+                "operationId": "StatusController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Status content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Status"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Status"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "status"
+                ],
+                "description": "delete the Status\n\u003cbr\u003e",
+                "operationId": "StatusController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "1049.\u003cnil\u003e.StatusResponseDTO": {
+            "title": "StatusResponseDTO",
+            "type": "object"
+        },
         "models.Branches": {
             "title": "Branches",
             "type": "object",
@@ -725,6 +902,42 @@
                 },
                 "Gender": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Status": {
+            "title": "Status",
+            "type": "object",
+            "properties": {
+                "Active": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "CreatedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DateCreated": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "DateModified": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "ModifiedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Status": {
+                    "type": "string"
+                },
+                "StatusCode": {
+                    "type": "string"
+                },
+                "StatusId": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
@@ -895,6 +1108,22 @@
                     "type": "string"
                 }
             }
+        },
+        "responses.StatusListResponse": {
+            "title": "StatusListResponse",
+            "type": "object",
+            "properties": {
+                "StatusCode": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "StatusDesc": {
+                    "type": "string"
+                },
+                "Statuses": {
+                    "$ref": "#/definitions/1049.\u003cnil\u003e.StatusResponseDTO"
+                }
+            }
         }
     },
     "tags": [
@@ -909,6 +1138,10 @@
         {
             "name": "currencies",
             "description": "CurrenciesController operations for Currencies\n"
+        },
+        {
+            "name": "status",
+            "description": "StatusController operations for Status\n"
         }
     ]
 }
